--- a/build.gradle
+++ b/build.gradle
@@ -16,10 +16,19 @@ repositories {
         name = "sonatype"
         url = "https://oss.sonatype.org/content/groups/public/"
     }
+    maven {
+        name = 'skript-repo'
+        url = 'https://repo.skriptlang.org/releases'
+    }
+    maven {
+        name = 'jitpack'
+        url = 'https://jitpack.io'
+    }
 }
 
 dependencies {
     compileOnly("org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT")
+    compileOnly("com.github.SkriptLang:Skript:2.9.4")
 }
 
 tasks {
@@ -27,7 +36,7 @@ tasks {
     // Configure the Minecraft version for our task.
     // This is the only required configuration besides applying the plugin.
     // Your plugin's jar (or shadowJar if present) will be used automatically.
-    minecraftVersion("1.21")
+    minecraftVersion("1.21.1")
   }
 }
 
