--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -4,4 +4,4 @@ main: com.pryzmm.priSKm.PriSKm
 depend: [Skript]
 api-version: '1.21'
 authors: [Pryzmm]
-description: A Skript addon to add features older plugins had (and some others I wanted)
+description: A Skript addon to add features other plugins don't have.
