--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ repositories {
 dependencies {
     compileOnly("org.spigotmc:spigot-api:1.21.4-R0.1-SNAPSHOT")
     compileOnly("com.github.SkriptLang:Skript:2.9.4")
+    compileOnly(files("libs/VivecraftSpigot-3.1.1.jar"))
 }
 
 tasks {
